Added multi-column layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <article id="grid_container">
+        <section id="section_one">
+            <img src="https://images.unsplash.com/photo-1638913662180-afc4334cf422?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                alt="coin on table">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur, similique. Temporibus, laboriosam
+                nobis placeat cum molestiae quis perferendis, deserunt est ex nulla cupiditate labore nesciunt nam
+                sequi, natus delectus autem.
+                Iste quis expedita laudantium rem saepe in beatae architecto cum unde minima. Quidem incidunt nostrum,
+                temporibus voluptatibus deleniti nesciunt similique exercitationem autem quas officia id, nam illo fugit
+                corrupti distinctio.
+                Beatae perferendis voluptatum temporibus minus aliquam, est tempora, itaque tempore voluptatibus natus
+                delectus laboriosam a labore ratione optio architecto quas nihil quos, quisquam eveniet vero distinctio
+                necessitatibus? Nisi, ipsa quasi.
+            </p>
+        </section>
+
+        <section id="section_two">
+            <img src="https://images.unsplash.com/photo-1638913662180-afc4334cf422?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                alt="coin on table">
+            <p>Only those are fit to live who do not fear to die; and none are fit to die who have shrunk from the joy
+                of life and the duty of life. Both life and death are parts of the same Great Adventure.
+                — Theodore Roosevelt</p>
+        </section>
+
+        <section id="section_three">
+            <img src="https://images.unsplash.com/photo-1638913662180-afc4334cf422?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                alt="coin on table">
+            <p>I had three chairs in my house; one for solitude, two for friendship, three for society.
+                — Henry David Thoreau</p>
+        </section>
+
+        <section id="section_four">
+            <img src="https://images.unsplash.com/photo-1638913662180-afc4334cf422?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                alt="coin on table">
+            <p>Days of my life I'd like to forget: The day the doctors told me I was sick. The day I had to tell my
+                friends I was ill. The day my hair fell out. The first day after my surgery. They're also the days I'll
+                always remember
+                — Kate Sawford</p>
+        </section>
+    </article>
 </body>
+
 </html>
